fix button padding on firefox

--- a/www/css/common/defaults.css
+++ b/www/css/common/defaults.css
@@ -31,6 +31,7 @@
 }
 
 *::-moz-focus-inner {
+    padding: 0;
     border: 0;
 }
 
